--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
 setw -g mouse on
 set-option -g default-shell /usr/bin/zsh
 set-option -g default-command /usr/bin/zsh
+ bind c new-window -c "#{pane_current_path}"
+ bind % split-window -hc "#{pane_current_path}"
+ bind '"' split-window -vc "#{pane_current_path}"
